--- a/CSE445/Assignments/Final-Assignment-2/Assignment-2.ipynb
+++ b/CSE445/Assignments/Final-Assignment-2/Assignment-2.ipynb
@@ -418,6 +418,93 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.56\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "        High       0.86      0.50      0.63        12\n",
+      "         Low       0.91      0.77      0.83        13\n",
+      "      Medium       0.00      0.00      0.00         8\n",
+      " Medium-High       0.22      0.50      0.31         4\n",
+      "  Medium-Low       0.43      0.77      0.56        13\n",
+      "\n",
+      "    accuracy                           0.56        50\n",
+      "   macro avg       0.48      0.51      0.47        50\n",
+      "weighted avg       0.57      0.56      0.54        50\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/mdalamin/anaconda3/lib/python3.11/site-packages/sklearn/metrics/_classification.py:1469: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/Users/mdalamin/anaconda3/lib/python3.11/site-packages/sklearn/metrics/_classification.py:1469: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/Users/mdalamin/anaconda3/lib/python3.11/site-packages/sklearn/metrics/_classification.py:1469: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    }
+   ],
+   "source": [
+    "# import pandas as pd\n",
+    "# from sklearn.model_selection import train_test_split\n",
+    "# from sklearn.metrics import accuracy_score, classification_report\n",
+    "# from sklearn.preprocessing import LabelEncoder\n",
+    "# from sklearn.tree import DecisionTreeClassifier\n",
+    "\n",
+    "# # Load the data into df1\n",
+    "# df1 = pd.read_csv('job-data-LinerR.csv')\n",
+    "\n",
+    "# # Define salary ranges for each category\n",
+    "# salary_ranges = [(0, 30000), (30001, 50000), (50001, 70000), (70001, 90000), (90001, float('inf'))]\n",
+    "# categories = ['Low', 'Medium-Low', 'Medium', 'Medium-High', 'High']\n",
+    "\n",
+    "# # Create a new categorical column based on the salary ranges\n",
+    "# def categorize_salary(salary):\n",
+    "#     for i, (lower, upper) in enumerate(salary_ranges):\n",
+    "#         if lower <= salary <= upper:\n",
+    "#             return categories[i]\n",
+    "\n",
+    "# df1['Salary_Category'] = df1['Salary'].apply(categorize_salary)\n",
+    "\n",
+    "# # Separate features (X) and target variable (y)\n",
+    "# X = df1.drop(columns=[\"joining_date\", \"Salary\", \"Salary_Category\"])\n",
+    "# y = df1['Salary_Category']\n",
+    "\n",
+    "# # Apply label encoding to categorical variables\n",
+    "# label_encoder = LabelEncoder()\n",
+    "# X_encoded = X.apply(label_encoder.fit_transform)\n",
+    "\n",
+    "# # Split the dataset into training and testing sets\n",
+    "# X_train, X_test, y_train, y_test = train_test_split(X_encoded, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# # Build and train the decision tree model\n",
+    "# model = DecisionTreeClassifier(random_state=42)\n",
+    "# model.fit(X_train, y_train)\n",
+    "\n",
+    "# # Make predictions\n",
+    "# y_pred = model.predict(X_test)\n",
+    "\n",
+    "# # Evaluate the model\n",
+    "# accuracy = accuracy_score(y_test, y_pred)\n",
+    "# print(\"Accuracy:\", accuracy)\n",
+    "\n",
+    "# # Classification report\n",
+    "# print(\"Classification Report:\")\n",
+    "# print(classification_report(y_test, y_pred))\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
